# Hydra-Airflow-Template

./: README.md  pyproject.toml
dag_generator/: __init__.py  __main__.py  config_store.py  default.jinja2  preset.py  templater.py  yaml_to_dirs.py
test/: config_store.py  new_template.jinja2
test/ocr/: default.yaml  prod.yaml
test/presets/ocr/: default.yaml  dev.yaml
test/presets/ocr/action/: extract.yaml  load.yaml  transform.yaml
test/presets/ocr/dag/: base.yaml
test/yaml_to_dirs/: test.py  test.yaml  try.py
test/yaml_to_dirs/ocr/actions/: extract.yaml  transform.yaml
test/yaml_to_dirs/ocr/dag/: base.yaml
